--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@types/nprogress": "^0.2.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
