--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.2.2",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
+    "markdown-to-jsx": "^7.1.8",
     "next": "13.1.2",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
